# analyzer

./: CMakeLists.txt  README.md  main.cpp  main_menu.cpp
src/: CMakeLists.txt  analog_receiver.h  analog_signal_interface.h  button.h  digital_signal_interface.h  digital_signal_plot.h  figure_display.h  global_buffer.h  i2c_interface.h  i2c_receiver.h  main.h  main_menu.cpp  signal_interface.h  single_select.h  spi_interface.h  spi_receiver.h  touch_scan.h  uart_interface.h  uart_receiver.h
